Add core to build
Issue gh-610